fixed issue with active field highlighting and error div wrapping

--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -28,9 +28,8 @@ $hover_lgt_link: #fcff00;
 
 $flashmsg_bg: #e0f100;
 $flashmsg_txt: #333;
-$flashmsg_bg_label: #ecf1a7;
 
-$page_height: 880px;
+$page_height: 900px;
 
 
 // Page layout can be done using mixins applied to your semantic classes and IDs:
@@ -211,7 +210,7 @@ h1.heading {
 }
 
 .field_with_errors{
-  background-color: $flashmsg_bg_label;
+  background-color: $active_label_bg;
 
 }
 
@@ -306,6 +305,11 @@ h1.thank_you{
 .hidden_label{
   color: $label_bg !important;
   background-color: $label_bg !important;
+  
+  .field_with_errors{
+    color: $active_label_bg !important;
+    background-color: $active_label_bg !important;
+  }
 }
 
 .active_visible_label{
